# HighHarness

./: .gitattributes  .gitignore  CHANGELOG.agent.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HARNESS_ENGINEERING.md  HARNESS_INTEGRATION.md  HARNESS_METRICS.md  HARNESS_PRIMITIVES.md  HARNESS_SECURITY.md  HARNESS_VERSIONING.md  LICENSE  Makefile  README.md  SECURITY.md  demo_agent.py  highguard.py  readharness.md
.claude/: settings.json
Formula/: highharness.rb
docs/: cli-reference.md
scripts/: cli_version.rs.template  entry-1-args-edit.json  entry-1-changelog-entry-resolved.json  entry-1-changelog-entry.json  entry-1-changes.json  entry-1-decisions.md  entry-1-edit.json  entry-1-plan.md  entry-1-pre-read.json  entry-1-pre-task-checklist.md  entry-1-repro.json  entry-1-semantic-verification.json  entry-1-task-state.md  entry-1-task.md  entry-1-verification-resolved.json  entry-1-verification.json  entry-1-version-out.txt  fix_changelog_chain.py  install.sh  prove_hash_chain.sh  prune-stale-artifacts.sh  reproducibility-check.sh  setup.sh
src/: bootstrap.rs  canonical.rs  error.rs  eval.rs  gates.rs  id.rs  incident.rs  lib.rs  main.rs  metrics.rs  permissions.rs  redaction.rs  report.rs  retrieval.rs  telemetry.rs
src/cli/: eval.rs  (+20 more)
tests/: canonical_golden.rs  cli_changelog_append_flag.rs  cli_gates_run_subcommand.rs  cli_tools_args_inline.rs  cli_version.rs  concurrency.rs  e2e_entry_1.rs  e2e_full_workflow.rs  eval_runner.rs  gate_semantic.rs  genesis_linkage.rs  incident.rs  mcp_sandbox.rs  metrics_rollup.rs  provider_adapter.rs  redaction.rs  verify_on_read.rs
(+58 files in other folders)
